<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">660839387303348</string>
    <string name="TWITTER_CONSUMER_KEY">wxNfCzfk0dgzG4QHZWnfAeSPp</string>
    <string name="TWITTER_CONSUMER_SECRET">rU1W2swmiFnIfbq3farHKLLLGy7LX4N5Rc5KKjvmFmo0m0xxDG</string>
    <string name="app_name">Android Tuts+</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app">Android Tuts+</string>
    <string name="made">Made With</string>
    <string name="by">By Astro</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_tutorials">Tutorials+</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_login">Login</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="forgot">Forgot Password</string>
    <string name="title_activity_register">Register</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="email">Email</string>
    <string name="terms">i Agree To Terms And Conditions Apply</string>
    <string name="title_activity_registered">Registered</string>
    <string name="success">Registered Successfully</string>
    <string name="share">Share To</string>
    <string name="tuts">Tutorials</string>

    <string-array name="network">
        <item>On Even Mobile Network</item>
        <item>Only in Wifi</item>
        <item>Any</item>
    </string-array>
    <string-array name="tuts_titles">
        <item>Hello World Example</item>
        <item>Buttons</item>
        <item>ImageView</item>
        <item>Image Buttons</item>
        <item>Edit Text</item>
        <item>Toast</item>
        <item>Checkbox</item>
        <item>Radio Buttons</item>
        <item>Toogle Buttons</item>
        <item>VideoView</item>
        <item>WebView</item>
        <item>Spinner</item>
        <item>Rating Bars</item>
        <item>Date-picker</item>
        <item>Time-picker</item>
        <item>Alert-Dialog</item>
        <item>Notification</item>
        <item>ProgressBar</item>
        <item>Menus</item>
        <item>Intents</item>
        <item>ListView</item>
        <item>SQL Lite</item>
    </string-array>
    <string-array name="NavTitles">
        <item>Premium Tuts+</item>
        <item>Like Us</item>
        <item>Rate Us</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="Learntitle">
        <item>Execute</item>
        <item>Copy</item>
        <item>Download</item>
    </string-array>
    <string-array name="load_tuts">
        <item>hello.html</item>
        <item>Buttons.html</item>
        <item>ImageView.html</item>
        <item>ImageButton.html</item>
        <item>EditText.html</item>
        <item>Toast.html</item>
        <item>Checkbox.html</item>
        <item>RadioButton.html</item>
        <item>ToggleButton.html</item>
        <item>VideoView.html</item>
        <item>WebView.html</item>
        <item>Spinner.html</item>
        <item>Rating.html</item>
    </string-array>

    <string name="title_activity_learn">Learn</string>
    <string name="Download">Download</string>
    <string name="CopyContent">Copy Content</string>
    <string name="ExecuteCode">Execute Code</string>
    <string name="dow">Download</string>
    <string name="title_activity_mains">MainActivity</string>
    <string name="title_activity_buttons">Buttons</string>
    <string name="title_activity_image_view">ImageView</string>
    <string name="click">Click Me</string>
    <string name="title_activity_imagebutton">Imagebutton</string>
    <string name="clickimage">Click The Image Button</string>
    <string name="title_activity_edit_text">EditText</string>
    <string name="enter">Enter Input</string>
    <string name="show">Show</string>
    <string name="output">Output</string>
    <string name="title_activity_toast__ex">Toast_Ex</string>
    <string name="title_activity_checkbox">Checkbox</string>
    <string name="checkbox">"CheckBox Example "</string>
    <string name="title_activity_radio_button_ex">RadioButton_ex</string>
    <string name="yes">Yes</string>
    <string name="no">"No "</string>
    <string name="like">Do You Like This App</string>
    <string name="title_activity_toogle">Toogle</string>
    <string name="title_activity_video">Video</string>
    <string name="full">Fullscreen</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="draw_open">Open Navigation</string>
    <string name="draw_close">Close Navigation</string>
    <string name="option">Options</string>
    <string name="title_activity_spinner_act">Spinner_act</string>
    <string name="title_activity_rating">Rating</string>
    <string name="title_activity_web">Web</string>
    <string name="url">Enter URL</string>
    <string name="title_activity_notification">Notification</string>
    <string name="noti">Notification</string>
    <string name="app_desc">A Android Tutorial Guide</string>
    <string name="fblogin">Login With Facebook</string>
    <string name="login">Login</string>
    <string name="title_activity_about">About</string>
    <string name="and">Android Code</string>
    <string name="xml">XML Code</string>
    <string name="fbshare">Share to Facebook</string>
    <string name="title_activity_share_to_fb">Share To Facebook</string>
    <string name="cts">Code To Share</string>
    <string name="stw">Post To Wall</string>
    <string name="stf">Share To Friends</string>
    <string name="title_activity_share_to_frnd">Share To Friends</string>
    <string name="ts">Tweet</string>
    <string name="title_activity_twiiter">Twiiter</string>
    <string name="title_activity_google">Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="qs">Social Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="author"> Developer : Abhishek / Astro\n
        	astro@codeprogramming.tk \n
        
        	Facebook - Astro Abhi
        	\n
        	Twitter - @astro8295
        	
        
        </string>
    <string name="refresh">Refresh</string>
    <string name="selectFrnd">Friends</string>
    <string name="send_req">Send Request</string>
    <string name="cp">Open Source &amp; Protected By DCMA</string>

</resources>