<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RadioButton_ex" >

    <ImageView
        android:id="@+id/normalScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/android_logo" />

    <RadioGroup
        android1:id="@+id/ShareTo"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/normalScreen"
        android1:layout_marginLeft="33dp"
        android1:layout_marginTop="69dp" >

        <RadioButton
            android1:id="@+id/Facebook"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/yes" />

        <RadioButton
            android1:id="@+id/GooglePlus"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/no" />
    </RadioGroup>

    <TextView
        android1:id="@+id/tut_t"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/ShareTo"
        android1:layout_centerVertical="true"
        android1:text="@string/like"
        android1:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android1:id="@+id/go"
        android1:layout_width="100dp"
        android1:layout_height="50dp"
        android1:layout_below="@+id/ShareTo"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="22dp"
        android1:text="@string/show" />

</RelativeLayout>