<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Checkbox" 
    android:background="#ececec">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/normalScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/android_logo" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/normalScreen"
        android:layout_below="@+id/normalScreen"
        android:layout_marginTop="94dp"
        android:text="@string/checkbox" />

    <Button
        android:id="@+id/go"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/show"
         />

    <TextView
        android:id="@+id/tut_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/normalScreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/output"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
