<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditText" >

    <ImageView
        android:id="@+id/normalScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/android_logo" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/normalScreen"
        android:layout_below="@+id/go"
        android:background="#f9f9f9"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textVisiblePassword|textWebPassword"
        android:padding="10dp"
        android:textColor="#222" />

    <EditText
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/normalScreen"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:background="#f9f9f9"
        android:ems="10"
        android:hint="@string/enter"
        android:padding="10dp"
        android:textColor="#222" >

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/go"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/URL"
        android:layout_toRightOf="@+id/URL"
        android:text="@string/show" />

    <Button
        android:id="@+id/Button01"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditText01"
        android:layout_alignBottom="@+id/EditText01"
        android:layout_alignParentRight="true"
        android:text="@string/show" />

    <TextView
        android:id="@+id/tut_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/output"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>