<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Toast_Ex"
    android:background="#ececec" >

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/normalScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:src="@drawable/android_logo" />

    <EditText
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/normalScreen"
        android:layout_marginTop="54dp"
        android:background="#f9f9f9"
        android:ems="10"
        android:hint="@string/enter"
        android:padding="10dp"
        android:textColor="#222" />

    <Button
        android:id="@+id/go"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/URL"
        android:layout_toRightOf="@+id/URL"
        android:text="@string/show"
        android:layout_marginTop="-4dp" />

</RelativeLayout>
