<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blur" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".About" >

        <ImageView
            android:id="@+id/GoogleBtn"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_web" 
             android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/TextTitle"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f9f9f9"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/FrndName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/author"
            android:textAlignment="center"
             android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#f9f9f9"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp"
             android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#e8e8e8" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
             android:layout_gravity="center"
            android:src="@drawable/plogo"
/>
    </LinearLayout>

</ScrollView>
